Fix hover card clipping

--- a/src/components/GoblinToken.scss
+++ b/src/components/GoblinToken.scss
@@ -4,6 +4,7 @@
 .goblin-token {
   @include card.card(-2deg, 100%, list.slash(1, 1));
   position: relative;
+  overflow: visible;
 
   &:hover .hover-card {
     display: block;
